--- a/index.html
+++ b/index.html
@@ -130,6 +130,16 @@
 			<h2>Coding time!</h2>
 		</div>
 	</section>
+	<section class="slide shout">
+		<div style="font-size: 2em;">
+			<p>
+				репозиторий – <a href="http://bit.ly/vk-insta">bit.ly/vk-insta</a>
+			</p>
+			<p>
+				приложение – <a href="https://vk.com/instaflat">vk.com/instaflat</a>
+			</p>
+		</div>
+	</section>
 	<section class="slide">
 		<div>
 			<h2>Закончили!</h2>
