--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
 		<div>
 			<h2>Закончили!</h2>
 			<p>Евгений Дашкевич<br><a href="https://twitter.com/_jabs_">twitter.com/_jabs_</a></p>
-			<p>Михаил Пешехонов<br><a href="https://twitter.com/Peshekhonov">twitter.com/Peshekhonov</a></p>
+			<p>Михаил Пешехонов<br><a href="https://vk.com/m.peshekhonov">vk.com/m.peshekhonov</a></p>
 		</div>
 	</section>
 	<div class="progress"><div></div></div>
