еще правки в суть #3

--- a/index.html
+++ b/index.html
@@ -33,6 +33,12 @@
 	</section>
 	<section class="slide">
 		<div>
+			<h2 class="place speak-up">Еще один фреймворк?</h2>
+		</div>
+		<!-- есть задача сделать сервис. Киевляне сделали универсальный фреймворк на БЭМ-подходе -->
+	</section>
+	<section class="slide">
+		<div>
 			<h2 class="place speak-up">BEM? WTF?</h2>
 		</div>
 	</section>
@@ -43,23 +49,23 @@
 	</section>
 	<section class="slide">
 		<div>
-			<h2>Что такое BEM?</h2>
+			<h2>Что такое БЭМ?</h2>
 			<ul>
 				<li>методология создания веб-приложений</li>
 				<li class="next">способ удобно делить интерфейс на независимые части</li>
 				<li class="next">набор инструментов для автоматизации</li>
 				<li class="next">возможность создания библиотек web-компонентов и фреймворков</li>
 			</ul>
-			<p class="note next">
+			<!-- <p class="note next">
 				<a href="http://ru.bem.info/tutorials/start-with-project-stub#Что-такое-БЭМ-">bem.info/tutorials/start-with-project-stub</a>
-			</p>
+			</p> -->
 		</div>
 	</section>
 	<section class="slide">
 		<div>
 			<h2 class="place speak-up">bem-node?</h2>
 		</div>
-		<!-- есть задача сделать сервис. Киевляне сделали универсальный фреймворк на БЭМ-подходе -->
+		<!-- раскрыть почему бэм крутой и как БН этому помогает -->
 	</section>
 	<section class="slide">
 		<div>
@@ -67,11 +73,11 @@
 		</div>
 		<!-- Как это работает? -->
 	</section>
-	<section class="slide">
+	<!-- <section class="slide">
 		<div>
 			<p class="place speak-up"><code>.js</code> + <code>.common.js</code> + <code>.priv.js</code></p>
 		</div>
-	</section>
+	</section> -->
 	<!-- <section class="slide">
 		<div>
 			<h2>Страницы</h2>
